Allow ignoring QSqlQuery prepare failure

BUG: 498431